# superpascal

./: .gitignore  LICENSE  README.md
crates/compiler-rs/: Cargo.toml
crates/compiler-rs/ast/: Cargo.toml
crates/compiler-rs/ast/src/: lib.rs
crates/compiler-rs/backends/backend-zealz80/: Cargo.toml
crates/compiler-rs/backends/backend-zealz80/src/: lib.rs
crates/compiler-rs/driver/src/: compiler.rs
crates/compiler-rs/ir/: Cargo.toml
crates/compiler-rs/ir/src/: lib.rs
crates/compiler-rs/lexer/src/: lib.rs
crates/compiler-rs/parser/src/: classes.rs  core.rs  declarations.rs  lib.rs  query.rs  statements.rs  types.rs
crates/compiler-rs/runtime-spec/: Cargo.toml
crates/compiler-rs/runtime-spec/src/: lib.rs
crates/compiler-rs/semantics/: Cargo.toml
crates/compiler-rs/semantics/src/: core.rs  expressions.rs  feature_checker.rs  lib.rs  lvalues.rs  types.rs
crates/compiler-rs/symbols/: Cargo.toml
crates/compiler-rs/symbols/src/: lib.rs
crates/compiler-rs/tests/tree-sitter-corpus/: .gitignore  CORPUS_SETUP.md  Cargo.toml  README.md  sync_corpus.sh
crates/compiler-rs/tests/tree-sitter-corpus/corpus/: .gitkeep  README.md
crates/compiler-rs/tests/tree-sitter-corpus/src/: corpus_parser.rs  lib.rs
crates/compiler-rs/tokens/src/: lib.rs
crates/compiler-rs/types/src/: lib.rs
languageSpecification/: 00_Overview.md  02_Grammar.md  03_TypeSystem.md  04_Semantics.md  05_ABI_Concepts.md  17_CapabilityBasedMemory.md
