[workspace]
members = [
    "tokens",
    "lexer",
    "ast",
    # "parser",  # Will be added in Phase 2
    # "semantics",  # Will be added in Phase 3
    # "types",  # Will be added in Phase 3
    # "symbols",  # Will be added in Phase 3
    # "ir",  # Will be added in Phase 4
    # "errors",  # Will be added in Phase 5
    # "diagnostics",  # Will be added in Phase 5
    # "backend-zealz80",  # Will be added in Phase 4
    # "object-zealz80",  # Will be added in Phase 4
    # "runtime-spec",  # Will be added in Phase 4
    # "driver",  # Will be added in Phase 5
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
# Core dependencies (shared across crates)
# Add as needed
