[workspace]
members = [
    "tokens",
    "lexer",
    "ast",
    "errors",
    "parser",
    "types",
    "symbols",
    "semantics",
    "ir",
    "runtime-spec",
    "backends/backend-zealz80",
    # "diagnostics",  # Will be added in Phase 5
    # "objects/object-zealz80",  # Will be added in Phase 4
    # "driver",  # Will be added in Phase 5
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
# Core dependencies (shared across crates)
# Add as needed
